--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,71 @@ a:hover {
     text-decoration: underline;
 }
 
-.site-title {
+.site-subtitle, .site-title {
+    color: #262626;
     text-align: left;
-    color: black;
+}
+
+.site-subtitle {
+    font-style: italic;
+    font-weight: lighter;
+}
+
+.line {
+    height: 1px;
+    width: 20px;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.content h1 {
+    margin-top: 50px;
+    text-align: left;
+}
+
+.content h2 {
+    text-align: left;
+    color: #e8168a;
+    font-size: 35px;
+}
+
+.content p {
+    margin-top: 15px; 
+    margin-right: 10px;
+    margin-bottom: 25px;
+    margin-left: 35px;
+    text-align: center;
+    font-size: 20px;
+    animation: typing 4s steps(40) 1s normal;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.content p:after {
+    content: '|';
+    margin-left: 5px;
+    opacity: 1;
+    animation: pisca .7s infinite;
+}
+
+/* Animação aplicada ao content referente a classe *.titulo-principal* resultando num efeito de cursor piscando. */
+
+@keyframes pisca {
+    0%, 100% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+}
+
+/*segunda animacao*/
+
+@keyframes typing {
+    from {
+        width: 0;
+    }
+    to {
+        width: 18em;
+        color: #e8168a;
+    }
 }
